force-app/main/default/objects/Customer_Demand__c/Customer_Demand__c.object-meta.xml
<CustomObject>
    <label>Customer Demand</label>
    <nameField>
        <displayFormat>CDN-{000000000}</displayFormat>
        <label>Customer Demand Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Demands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>