force-app/main/default/objects/Customer_Demand__c/fields/Business_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Opportunity</label>
    <referenceTo>MD_Opportunity__c</referenceTo>
    <relationshipLabel>Customer Demands</relationshipLabel>
    <relationshipName>Customer_Demands</relationshipName>
    <type>Lookup</type>
</CustomField>