force-app/main/default/objects/Customer_Demand__c/fields/Customer_Code_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code_Ship_To__c</fullName>
    <formula>Ship_To_Party__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Code (Ship To)</label>
    <type>Text</type>
</CustomField>