force-app/main/default/objects/Customer_Demand__c/fields/Customer_Ref_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ref_Date__c</fullName>
    <label>Customer Ref. Date</label>
    <type>Date</type>
</CustomField>