force-app/main/default/objects/Customer_Demand__c/fields/Date_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Creation__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date of Creation</label>
    <type>Date</type>
</CustomField>