force-app/main/default/objects/Customer_Demand__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <formula>TEXT( Sales_Area__r.Distribution_Channel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Channel</label>
    <type>Text</type>
</CustomField>