force-app/main/default/objects/Customer_Demand__c/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YQT</fullName>
            </value>
            <value>
                <fullName>QT</fullName>
            </value>
            <value>
                <fullName>ZQT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>