force-app/main/default/objects/Customer_Demand__c/fields/External_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Quote_ID__c</fullName>
    <label>SAP Quote Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>