force-app/main/default/objects/Customer_Demand__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YQT - Customer Demand</fullName>
                <default>true</default>
                <label>YQT - Customer Demand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>