force-app/main/default/objects/Customer_Demand__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <formula>TEXT( Sales_Area__r.Delivering_Plant__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant</label>
    <type>Text</type>
</CustomField>