force-app/main/default/objects/Customer_Demand__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Customer Demands</relationshipLabel>
    <relationshipName>Customer_Demands</relationshipName>
    <type>Lookup</type>
</CustomField>