force-app/main/default/objects/Customer_Demand__c/fields/Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_No__c</fullName>
    <label>Purchase Order No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>