force-app/main/default/objects/Customer_Demand__c/fields/QT_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>QT_Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>