force-app/main/default/objects/Customer_Demand__c/fields/QT_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>QT_Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>