force-app/main/default/objects/Customer_Demand__c/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MD_Sales_Area__c.Parent_Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Bill_To_Party__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MD_Sales_Area__c</referenceTo>
    <relationshipLabel>Customer Demands</relationshipLabel>
    <relationshipName>Customer_Demands</relationshipName>
    <type>Lookup</type>
</CustomField>