force-app/main/default/objects/Customer_Demand__c/fields/Ship_To_Party__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship-To Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Demands</relationshipLabel>
    <relationshipName>Customer_Demands</relationshipName>
    <type>Lookup</type>
</CustomField>