force-app/main/default/objects/Customer_Demand__c/validationRules/Account_Must_Be_Activate.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Must_Be_Activate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
ISBLANK(Customer_Code_Bill_To__c)
)</errorConditionFormula>
    <errorMessage>You cannot create &apos;Customer Demand&apos; with the Account Deactivated. Please activate the account before creating the Customer Demand.</errorMessage>
</ValidationRule>