force-app/main/default/objects/Customer_Demand__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Distribution_Channel__c</columns>
    <columns>Plant__c</columns>
    <columns>Bill_To_Party__c</columns>
    <columns>Ship_To_Party__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>